--- a/styles/regForm.css
+++ b/styles/regForm.css
@@ -8,8 +8,7 @@
 .container {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(50, 0, 0, 0.7), rgba(50, 0, 0, 0.7)),
-    url(../image/bg.png);
+  background-image: linear-gradient(rgba(50, 0, 0, 0.7), rgba(50, 0, 0, 0.7)), url(../image/bg.png);
   background-position: center;
   background-size: cover;
   position: relative;
@@ -76,6 +75,12 @@ input {
   background: #eaeaea;
   border-radius: 8px;
   font-size: 18px;
+}
+
+input::placeholder {
+  font-weight: bold;
+  opacity: 0.5;
+  color: rgb(130, 130, 130);
 }
 
 /* .input-field i {
