--- a/styles/start.css
+++ b/styles/start.css
@@ -1,6 +1,6 @@
 .button {
-  color: white;
-  background: blue;
+  color: black;
+  background: yellow;
   width: 100px;
   height: 40px;
   border-radius: 5px;
