--- a/styles/start.css
+++ b/styles/start.css
@@ -1,7 +1,11 @@
 .button {
-  color: black;
-  background: yellow;
-  width: 100px;
-  height: 40px;
+  color: yellow;
+  background: black;
+  padding: 15px;
+  text-decoration: none;
   border-radius: 5px;
+}
+
+.button:hover {
+  background: red;
 }
