--- a/styles/start.css
+++ b/styles/start.css
@@ -1,9 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 .button {
   color: yellow;
   background: black;
   padding: 15px;
   text-decoration: none;
   border-radius: 5px;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
 }
 
 .button:hover {
