--- a/styles/start.css
+++ b/styles/start.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 .button {
-  color: yellow;
+  color: white;
   background: #461919;
   padding: 15px;
   text-decoration: none;
