--- a/styles/start.css
+++ b/styles/start.css
@@ -8,6 +8,7 @@
   border-radius: 5px;
   font-family: "Poppins", sans-serif;
   font-size: 18px;
+  transition: background 1s;
 }
 
 .button:hover {
