--- a/styles/start.css
+++ b/styles/start.css
@@ -9,7 +9,7 @@
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   transition: background 1s;
-  top-margin: 100px;
+  margin-top: 100px;
 }
 
 .button:hover {
