--- a/styles/posts.css
+++ b/styles/posts.css
@@ -19,11 +19,12 @@ body {
 }
 
 .page-header {
-  background-color: #333;
+  background-color: #461919;
   color: white;
   text-align: center;
   padding: 10px 0;
   font-size: 40px;
+  border-radius: 5px;
 }
 
 .page-container {
@@ -88,4 +89,28 @@ body {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   transform: translateY(-2px);
   transition: all 0.3s ease;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(50, 0, 0, 0.7), rgba(50, 0, 0, 0.7)),
+    url(../image/bg.png);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  background-color: transparent;
+}
+
+.content {
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(50, 0, 0, 0.7), rgba(50, 0, 0, 0.7)),
+    url(../image/bg.png);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  background-color: transparent;
 }
